<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
  <data>
    <variable
        name="viewModel"
        type="ga.banga.country.ui.screens.home.HomeViewModel"
        />


  </data>
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".ui.screens.home.HomeFragment"
      >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_home"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:transitionGroup="true"
        android:transitionName="@string/contry_card_transition_name"
        app:showContent="@{viewModel.isLoading}"
        >
      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/desc_text_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#7F000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/top_space"
            app:layout_constraintVertical_bias="1.0"
            />
        <Space
            android:id="@+id/top_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/primary_text"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/primary_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="#FFFFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/sub_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgFlag"
            tools:text="Gabon"
            />

        <TextView
            android:id="@+id/sub_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/lib_capitale_libreville"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#B3FFFFFF"
            app:layout_constraintBottom_toTopOf="@id/sub_text_devise"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/primary_text"
            />

        <TextView
            android:id="@+id/sub_text_devise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_devise"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#B3FFFFFF"
            app:layout_constraintBottom_toTopOf="@id/sub_text_dial"
            app:layout_constraintStart_toStartOf="@+id/primary_text"
            />
        <TextView
            android:id="@+id/sub_text_devise_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#B3FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/sub_text_devise"
            app:layout_constraintStart_toEndOf="@+id/sub_text_devise"
            />
        <TextView
            android:id="@+id/sub_text_dial_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#B3FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/action_button_1"
            app:layout_constraintStart_toEndOf="@id/sub_text_dial"
            />
        <TextView
            android:id="@+id/sub_text_dial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/lib_code_dial"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#B3FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/action_button_1"
            app:layout_constraintStart_toStartOf="@+id/primary_text"
            />
        <Button
            android:id="@+id/action_button_1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minWidth="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/lib_btn_nos_provinces"
            android:textColor="#FFFFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/action_button_2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minWidth="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/lib_btn_une_autre_photo"
            android:textColor="#FFFFFFFF"
            app:layout_constraintStart_toEndOf="@+id/action_button_1"
            app:layout_constraintTop_toTopOf="@+id/action_button_1"
            />
        <ImageView
            android:id="@+id/imgFlag"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/desc_drapeau_du_gabon"
            app:layout_constraintBottom_toBottomOf="@+id/sub_text_dial"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/primary_text"
            tools:srcCompat="@tools:sample/avatars"
            />


      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:showProgressBar="@{viewModel.isLoading}"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>